Fix margin job-item, add align-items for job-item-company-summary.

--- a/src/app/common/components/icon-label/icon-label.component.scss
+++ b/src/app/common/components/icon-label/icon-label.component.scss
@@ -1,7 +1,7 @@
 .label-text {
     display: flex;
     align-items: center;
-    line-height: 1;
+    line-height: 18px;
 }
 
 .icon {
