--- a/src/app/job/job.component.scss
+++ b/src/app/job/job.component.scss
@@ -30,5 +30,6 @@
         flex-basis: 70%;
         background-color: #fff;
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, .09);
+        max-height: 1340px;
     }
 }
